fixed some layout issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
   position: fixed;
 	background-color: #353d47;
   top: 0px;
+  left: 0px;
   color: white;
 	height: 40px;
   width: 100%;
@@ -17,12 +18,23 @@
 text{
 	fill: black;
 }
+
 #page-container{
+  padding:0;
   margin-top: 40px;
   border: 0px solid red;
   max-width: 100vw !important;
-  width:100vw;
+  width:100%;
   height: calc(100vh - 40px);
+}
+
+.row{
+  margin:0;
+  padding:0;
+}
+
+.col-12{
+  padding:0;
 }
 
 .bd-sidebar {
@@ -39,27 +51,30 @@ text{
 
 .bd-content {
   padding:0;
+  padding-left: 2em;
   margin-left: 218px;
   border: 0px solid green;
   max-width: 100vw !important;
-  flex-grow: 1;
-  overflow: auto !important;
+  width:100%;
+  overflow: auto;
 }
 
 .bd-content .row {
   padding-top: 1rem;
   padding-bottom: 1rem;
-
 }
 
 .dropdown{
   position: relative;
   padding-left: 10px;
   padding-top: 10px;
+  padding-bottom: 5px;
 }
 
 .bd-content .container{
   border: 0px solid black;
+  padding:0;
+  margin:0;
   padding-top: 2em;
 }
 
